Added ListTraverse and swapped out wildcard for phantom type witness